# test_evron_fastapi_task

./: README.md  main.py  pyproject.toml
app/: settings.py
app/core/: db.py
app/dto/: response_dto.py  user.py
app/routes/: stats.py
app/services/: client_service.py  user_service.py
