[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nataliya <nataliya.s.pavlova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
sqlalchemy = "^2.0.30"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
